fix(dataset): enable word wrap on .page_title elements

--- a/frontend/css/rodi_css.css
+++ b/frontend/css/rodi_css.css
@@ -176,7 +176,6 @@ section + section {
     font-size: 30px;
     text-transform: uppercase;
     letter-spacing: -0.05em;
-    white-space: nowrap;
     text-align: center;
 }
 
@@ -191,7 +190,6 @@ section + section {
     font-size: 50px;
     text-transform: uppercase;
     letter-spacing: -0.05em;
-    white-space: nowrap;
     text-align: center;
     padding-bottom: 1em;
 }
